# yourls-tray-app

./: .gitignore  Cargo.toml  README.md
.agents/: AGENTS.md
.references/n_mnt_user_appdata_yourls/plugins/prune-inactive-links/: plugin.php
.references/n_mnt_user_appdata_yourls/plugins/public-shortener/: plugin.php
src/: api.rs  clipboard.rs  common.rs  config.rs  i18n.rs  main.rs  tray.rs  update.rs
tools/: update.ps1  update.sh
