[package]
name = "yourls-tray-app"
version = "0.1.7"
edition = "2024"


[dependencies]
tray-icon = "0.19"
clipboard-master = "4.0.0"
arboard = "3.4.1"
ureq = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
notify-rust = "4"
device_query = "1"
crossbeam-channel = "0.5"
serde_json = "1.0"
regex = "1.10"
