[package]
name = "yourls-tray-app"
version = "1.0.2"
edition = "2024"


[dependencies]
tray-icon = "0.19"
clipboard-master = "4.0.0"
arboard = "3.4.1"
ureq = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"
notify-rust = "4"
device_query = "1"
crossbeam-channel = "0.5"
serde_json = "1.0"
regex = "1.10"
single-instance = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Globalization"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"
